-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-09-23	fwobbe
	* gmtswitch:		Allow comments in ~/.gmtversions
	* configure.ac, src/{gmt_version.h.in,gmt_version.c,GNUmakefile}:	Set
				svnversion in configure.ac. Fallback solution if tree
				was exported from svn and does not contain metadata.

2011-09-23	jluis
	* pslib.c:		PSL_free_nonmacro was actually not freeing any memory.

2011-09-23	pwessel
	* gmt_init.c:		Fixed memory leaks pointed out by Florian Wobbe.

2011-09-23	remko
	* project.c(oblique_setup):	Return clat,clon in only when !c_given.

2011-09-23	fwobbe
	* pslib.c, gmt_plot.c, grdimage.c:	Fixed a memory leak in GMT_export2proj4

2011-09-23	jluis
	* grd2xyz.c:		Make -S option work in GMT_COMPAT mode.

2011-09-22	remko
	* psclip.c, pscoast.c, grdcontour.c:	Changed order GMT_plotcanvas and
				GMT_plane_perspective.
	* gmt_plot.c:		Added a new way to determine the edges of a plot when circular.

2011-09-21	pwessel
	* pstext.txt:		Removed old -S from examples

2011-09-21	fwobbe
	* filter1d.c:		Fixed a bug that caused incomplete output of successive
				segments. Cleaned up code (use prefix operator). Removed
				expensive while constructs to speed up large start/stop
				times in -T
	* gmtconvert.c:		Prevent memory access violation in GMT_report
	* pswiggle.txt:		Removed old option -N from synopsis

2011-09-21	remko
	* common_options.txt:	Added missing -Xf, -Yf
	* pscoast.c:		Set default fill colour to same as set by -B+g
	* test/pscoast/{placement,pseudo}.sh:	New tests by Ken McLean

2011-09-20	pwessel
	* meca:			Added missing -A to the synopsis of psvelo.c

2011-09-20	fwobbe
	* {dbase,gshhs,imgsrc,meca,mgd77,potential,segyprogs,sph,spotter,x2sys,}Makefile:
				Add rm -rf *.dSym to clean targets. Do not generate dSYM
				files in bindir and libdir: dsymutil cannot create symbol