@@ -1,108 +1,0 @@
-# TEST
-> 01010221
--159.375	18.875	626482	538623	440.703
--159.375	19.125	627922	800767	2206.592
--159.125	19.125	627923	800767	1581.238
--158.875	19.125	627924	800767	3107.801
--159.375	19.375	629362	800767	1760.472
--159.125	19.375	629363	800767	3213.747
--158.875	19.375	629364	800767	2022.918
--158.625	19.375	629365	533503	842.805
--159.375	19.625	630802	800767	1036.333
--159.125	19.625	630803	800767	525.245
--158.875	19.625	630804	800767	659.362
--158.625	19.625	630805	533503	252.324
--158.375	19.625	630806	533503	1232.964
--159.125	19.875	632243	538623	533.080
--158.875	19.875	632244	800767	965.020
--158.625	19.875	632245	800767	1731.658
--158.375	19.875	632246	800767	1058.789
--158.125	19.875	632247	533503	496.388
--159.125	20.125	633683	538623	1384.433
--158.875	20.125	633684	800767	1139.774
--158.625	20.125	633685	800767	3387.912
--158.375	20.125	633686	800767	2971.643
--158.125	20.125	633687	800767	2692.261
--157.875	20.125	633688	800767	2888.564
--158.875	20.375	635124	800767	1070.288
--158.625	20.375	635125	800767	2269.680
--158.375	20.375	635126	800767	3422.157
--158.125	20.375	635127	800767	2773.533
--157.875	20.375	635128	800767	2405.111
--157.625	20.375	635129	800767	3001.986
--158.875	20.625	636564	800767	427.307
--158.625	20.625	636565	800767	2750.775
--158.375	20.625	636566	800767	3079.130
--158.125	20.625	636567	800767	4796.490
--157.875	20.625	636568	800767	3830.231
--157.625	20.625	636569	795647	527.403
--158.625	20.875	638005	800767	3289.498
--158.375	20.875	638006	800767	4307.929
--158.125	20.875	638007	800767	2140.330
--157.875	20.875	638008	800767	7179.668
--158.875	21.125	639444	800767	1635.541
--158.625	21.125	639445	800767	1004.850
--158.375	21.125	639446	533311	2210.270
--158.125	21.125	639447	800767	1918.181
--157.875	21.125	639448	800767	7842.399
--157.625	21.125	639449	800767	2829.907
--157.375	21.125	639450	533503	1018.575
--159.625	21.375	640881	538623	793.644
--159.375	21.375	640882	538623	1134.701
--159.125	21.375	640883	800767	1756.339
--158.875	21.375	640884	800767	1707.816
--157.875	21.375	640888	533311	2494.898
--157.625	21.375	640889	538623	811.803
--157.375	21.375	640890	538623	2261.481
--157.125	21.375	640891	538623	889.734
--159.375	21.625	642322	538623	1965.655
--159.125	21.625	642323	800767	3907.446
--157.625	21.625	642329	24	137.115
--157.375	21.625	642330	538623	2211.640
--159.125	21.875	643763	800767	1407.917
--158.875	21.875	643764	800767	1569.611
--157.625	21.875	643769	538623	782.082
--157.375	21.875	643770	538623	1080.605
--158.875	22.125	645204	800767	1703.495
--158.625	22.125	645205	800767	3986.099
--158.375	22.125	645206	800767	873.108
--158.125	22.125	645207	538623	446.987
--157.875	22.125	645208	538623	2576.718
--157.625	22.125	645209	538623	3809.482
--157.375	22.125	645210	538623	634.407
--158.625	22.375	646645	538623	737.843
--158.375	22.375	646646	800767	1249.285
--158.125	22.375	646647	800767	529.887
--157.875	22.375	646648	538623	988.849
--157.625	22.375	646649	538623	1965.962
--157.375	22.375	646650	538623	919.325
--158.125	22.625	648087	800767	1472.332
--157.875	22.625	648088	538623	1851.870
--157.625	22.625	648089	538623	2718.801
--157.375	22.625	648090	538623	2154.454
--158.125	22.875	649527	800767	731.038
--157.875	22.875	649528	795647	2003.345
--157.625	22.875	649529	538623	1014.488
--157.375	22.875	649530	538623	2299.294
--157.875	23.125	650968	800767	2782.211
--157.625	23.125	650969	538623	3714.104
--157.375	23.125	650970	538623	1570.143
--157.125	23.125	650971	538623	1485.649
--157.875	23.375	652408	800767	1387.886
--157.625	23.375	652409	538623	526.764
--157.125	23.375	652411	538623	275.221
--157.875	23.625	653848	538623	663.772
--157.625	23.625	653849	538623	1222.208
--157.375	23.625	653850	538623	1092.981
--157.125	23.625	653851	538623	1495.419
--157.875	23.875	655288	538623	1296.397
--157.625	23.875	655289	538623	1055.672
--157.375	23.875	655290	538623	692.876
--157.125	23.875	655291	538623	309.803
--157.875	24.125	656728	538623	2186.162
--157.625	24.125	656729	538623	1507.937
--157.375	24.125	656730	538623	3714.406
--157.125	24.125	656731	538623	1103.000
--157.625	24.375	658169	538623	703.985
--157.375	24.375	658170	538623	1730.786
--157.375	24.625	659610	538623	397.883
