@@ -1,0 +1,108 @@
+# TEST
+> 01010221
+-159.38	18.88	626482	538623	440.70
+-159.38	19.12	627922	800767	2206.59
+-159.12	19.12	627923	800767	1581.24
+-158.88	19.12	627924	800767	3107.80
+-159.38	19.38	629362	800767	1760.47
+-159.12	19.38	629363	800767	3213.75
+-158.88	19.38	629364	800767	2022.92
+-158.62	19.38	629365	533503	842.81
+-159.38	19.62	630802	800767	1036.33
+-159.12	19.62	630803	800767	525.25
+-158.88	19.62	630804	800767	659.36
+-158.62	19.62	630805	533503	252.32
+-158.38	19.62	630806	533503	1232.96
+-159.12	19.88	632243	538623	533.08
+-158.88	19.88	632244	800767	965.02
+-158.62	19.88	632245	800767	1731.66
+-158.38	19.88	632246	800767	1058.79
+-158.12	19.88	632247	533503	496.39
+-159.12	20.12	633683	538623	1384.43
+-158.88	20.12	633684	800767	1139.77
+-158.62	20.12	633685	800767	3387.91
+-158.38	20.12	633686	800767	2971.64
+-158.12	20.12	633687	800767	2692.26
+-157.88	20.12	633688	800767	2888.56
+-158.88	20.38	635124	800767	1070.29
+-158.62	20.38	635125	800767	2269.68
+-158.38	20.38	635126	800767	3422.16
+-158.12	20.38	635127	800767	2773.53
+-157.88	20.38	635128	800767	2405.11
+-157.62	20.38	635129	800767	3001.99
+-158.88	20.62	636564	800767	427.31
+-158.62	20.62	636565	800767	2750.78
+-158.38	20.62	636566	800767	3079.13
+-158.12	20.62	636567	800767	4796.49
+-157.88	20.62	636568	800767	3830.23
+-157.62	20.62	636569	795647	527.40
+-158.62	20.88	638005	800767	3289.50
+-158.38	20.88	638006	800767	4307.93
+-158.12	20.88	638007	800767	2140.33
+-157.88	20.88	638008	800767	7179.67
+-158.88	21.12	639444	800767	1635.54
+-158.62	21.12	639445	800767	1004.85
+-158.38	21.12	639446	533311	2210.27
+-158.12	21.12	639447	800767	1918.18
+-157.88	21.12	639448	800767	7842.40
+-157.62	21.12	639449	800767	2829.91
+-157.38	21.12	639450	533503	1018.58
+-159.62	21.38	640881	538623	793.64
+-159.38	21.38	640882	538623	1134.70
+-159.12	21.38	640883	800767	1756.34
+-158.88	21.38	640884	800767	1707.82
+-157.88	21.38	640888	533311	2494.90
+-157.62	21.38	640889	538623	811.80
+-157.38	21.38	640890	538623	2261.48
+-157.12	21.38	640891	538623	889.73
+-159.38	21.62	642322	538623	1965.65
+-159.12	21.62	642323	800767	3907.45
+-157.62	21.62	642329	24	137.11
+-157.38	21.62	642330	538623	2211.64
+-159.12	21.88	643763	800767	1407.92
+-158.88	21.88	643764	800767	1569.61
+-157.62	21.88	643769	538623	782.08
+-157.38	21.88	643770	538623	1080.61
+-158.88	22.12	645204	800767	1703.49
+-158.62	22.12	645205	800767	3986.10
+-158.38	22.12	645206	800767	873.11
+-158.12	22.12	645207	538623	446.99
+-157.88	22.12	645208	538623	2576.72
+-157.62	22.12	645209	538623	3809.48
+-157.38	22.12	645210	538623	634.41
+-158.62	22.38	646645	538623	737.84
+-158.38	22.38	646646	800767	1249.29
+-158.12	22.38	646647	800767	529.89
+-157.88	22.38	646648	538623	988.85
+-157.62	22.38	646649	538623	1965.96
+-157.38	22.38	646650	538623	919.33
+-158.12	22.62	648087	800767	1472.33
+-157.88	22.62	648088	538623	1851.87
+-157.62	22.62	648089	538623	2718.80
+-157.38	22.62	648090	538623	2154.45
+-158.12	22.88	649527	800767	731.04
+-157.88	22.88	649528	795647	2003.34
+-157.62	22.88	649529	538623	1014.49
+-157.38	22.88	649530	538623	2299.29
+-157.88	23.12	650968	800767	2782.21
+-157.62	23.12	650969	538623	3714.10
+-157.38	23.12	650970	538623	1570.14
+-157.12	23.12	650971	538623	1485.65
+-157.88	23.38	652408	800767	1387.89
+-157.62	23.38	652409	538623	526.76
+-157.12	23.38	652411	538623	275.22
+-157.88	23.62	653848	538623	663.77
+-157.62	23.62	653849	538623	1222.21
+-157.38	23.62	653850	538623	1092.98
+-157.12	23.62	653851	538623	1495.42
+-157.88	23.88	655288	538623	1296.40
+-157.62	23.88	655289	538623	1055.67
+-157.38	23.88	655290	538623	692.88
+-157.12	23.88	655291	538623	309.80
+-157.88	24.12	656728	538623	2186.16
+-157.62	24.12	656729	538623	1507.94
+-157.38	24.12	656730	538623	3714.41
+-157.12	24.12	656731	538623	1103.00
+-157.62	24.38	658169	538623	703.98
+-157.38	24.38	658170	538623	1730.79
+-157.38	24.62	659610	538623	397.88
